src/logs/exceptions-api.log
[2023-09-20 16:58:47] [31merror[39m uncaughtException: Cannot find module '../models/user'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
Error: Cannot find module '../models/user'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1077:15)
    at Module._load (node:internal/modules/cjs/loader:922:27)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js:4:14)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
[2023-09-20 16:59:21] [31merror[39m uncaughtException: Cannot find module '../'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
Error: Cannot find module '../'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1077:15)
    at Module._load (node:internal/modules/cjs/loader:922:27)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js:4:14)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
[2023-09-20 16:59:25] [31merror[39m uncaughtException: Cannot find module '../models/'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
Error: Cannot find module '../models/'
Require stack:
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\authenticate.js
- C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1077:15)
    at Module._load (node:internal/modules/cjs/loader:922:27)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\controllers\auth-controller.js:4:14)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
[2023-09-20 17:04:57] [31merror[39m uncaughtException: Unexpected identifier
C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\src\routes\api-docs.js:25
    apis: ["./src/routes/authenticate"]
    ^^^^

SyntaxError: Unexpected identifier
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:119:18)
    at Object.<anonymous> (C:\Users\soosa\OneDrive\Escritorio\Estacionamiento\app.js:16:22)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
